--- a/main.html
+++ b/main.html
@@ -401,7 +401,7 @@
         <div class="photo-container">
             <div class="photo-frame"></div>
             <!-- IMPORTANT: Replace "image/a.png" with the actual path to your image -->
-            <img src="image/a.png" alt="Beautiful Bandana" class="birthday-photo" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+            <img src="a.png" alt="Beautiful Bandana" class="birthday-photo" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
             <!-- This fallback div will show an emoji if the image link is broken -->
             <div class="fallback-photo">👸</div>
         </div>
