--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Birthday Bandana! 🎉</title>
+    <title>Happy Birthday Bidhan Daju! 🎉</title>
     <style>
         * {
             margin: 0;
@@ -465,17 +465,17 @@
 <body>
     <!-- Loading Screen -->
     <div class="loading-screen" id="loadingScreen">
-        <div class="loading-text">Preparing something special for Bandana...</div>
+        <div class="loading-text">Preparing something special for Bidhan...</div>
         <div class="gift-loading">🎁</div>
     </div>
 
     <div class="container">
-        <div class="birthday-message">🎂 Happy Birthday Sister! 🎉</div>
+        <div class="birthday-message">🎂 Happy Birthday Brother! 🎉</div>
 
         <div class="photo-container">
             <div class="photo-frame"></div>
             <!-- IMPORTANT: Replace "image/a.png" with the actual path to your image -->
-            <img src="a.png" alt="Beautiful Bandana" class="birthday-photo"
+            <img src="a.png" alt="Philo" class="birthday-photo"
                 onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
             <!-- This fallback div will show an emoji if the image link is broken -->
             <div class="fallback-photo">👸</div>
@@ -653,7 +653,7 @@
                 }, 2000);
 
                 setTimeout(() => {
-                    button.textContent = '💕 You are Amazing, Bandana! 💕';
+                    button.textContent = '💕 You are Amazing, Bidhan! 💕';
                 }, 3000);
 
             } else {
